# npassm

./: .gitignore  CMakeLists.txt  Makefile  README.md  default.nix  flake.nix
src/: app.h  bars.c  crypto.c  dialogbox.c  dialogbox.h  init_db.c  input.c  main.c  npassdb.c  passgen.c  passgen.h  ui.c  unlock_db.c  update.c
src/entry/: entry.c
src/group/: group.c  group.h
src/group/entry/: entry.c  entry.h
